k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skipan
  namespace: skipan
spec:
  type: ClusterIP
  selector: {app: skipan}
  ports:
  - port: 80
    targetPort: 8000
